# wt_custom_lang

./: .gitignore  Cargo.toml  NOTICE  README.md
docker/: Dockerfile  start.sh
guide/: how_to_use.md  install_folder.md  simple_installation.md  windows_lang_permission.md
src/: config.rs  custom_lang.rs  lang.rs  main.rs  primitive_lang.rs
src/app/: basic_prompts.rs  custom_lang.rs  mod.rs  prompts.rs  update.rs
src/app/prompts/: mod.rs  prompt_error.rs  prompt_for_backup.rs  prompt_for_entry.rs
src/cache/: cache.rs
src/lang_manipulation/: lang.rs  mod.rs  primitive_lang.rs
src/local_storage/: backup.rs  entries.rs  mod.rs
