[package]
name = "wt_custom_lang"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
overflow-checks = true
debug = true
debug-assertions = true
incremental = true

[profile.release]
lto = true
opt-level = 3
incremental = true

[profile.minimal]
inherits = "release"
lto = true
opt-level = "s"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
panic = "abort"

[dependencies]
eframe = "^0.16.0"
serde = { version = "1.0.133", features = ["derive"] }
csv = "^1.1.6"
confy = "^0.4.0"
rfd = "^0.6.3"
regex = "^1.5.4"
execute = "0.2.9"

#notify-rust = "4.5.5"

#tracing = "0.1.29"
#tracing-subscriber = "0.3.5"