[package]
name = "wt_custom_lang"
description = "A tool to create custom language files for the game War Thunder"
version = "0.2.1"
edition = "2021"
rust-version = "1.58"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
overflow-checks = true
debug = true
debug-assertions = true
incremental = true

[profile.release]
lto = true
opt-level = 3
incremental = true
debug-assertions = false

[dependencies]
eframe = "^0.16.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
csv = "^1.1.6"
confy = "^0.4.0"
rfd = "^0.6.3"
regex = "^1.5.4"
execute = "^0.2.9"
sysinfo = "^0.22.5"
directories = "^4.0.1"
chrono = "^0.4.19"
duckstore = "^2.1.0"
lazy_static = "1.4.0"
fs_extra = "1.2.0"
notify-rust = "4.5.5"

#[target.'cfg(windows)'.build-dependencies]
#winres = "0.1.12"